environments/dev/dotnet-api/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: platform-demo-api
spec:
  rules:
    - host: dev.platform-demo.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: platform-demo-api
                port:
                  number: 80
  tls:
    - hosts:
        - dev.platform-demo.local
      secretName: platform-demo-tls
